# gitstow

./: .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WEB_GUI_PLAN.md  demo.tape  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml
design_handoff_gitstow_landing/: Gitstow Landing.dc.html  README.md
docs/building/: audit-2026-07-06.md  implementation-plan.md  roadmap.md  ui-audit-2026-07-12.md
docs/building/plans/: 2026-07-06-wave-1-correctness-safety.md  2026-07-06-wave-2-status-model.md  2026-07-06-wave-3-structure-polish.md  2026-07-12-ui-wave-a-make-it-real.md  2026-07-12-ui-wave-b-polish.md  2026-07-16-move-repo-between-workspaces.md
docs/superpowers/plans/: 2026-07-19-diff-viewer.md
docs/superpowers/specs/: 2026-07-19-diff-viewer-design.md
docs/user/: commands.md  concepts.md  configuration.md  getting-started.md
scripts/: release.sh
site/: index.html  style.css
src/gitstow/: __init__.py  __main__.py
src/gitstow/cli/: __init__.py  add.py  config_cmd.py  diff_cmd.py  doctor.py  exec_cmd.py  export_cmd.py  fetch.py  helpers.py  list_cmd.py  main.py  manage.py  migrate.py  onboard.py  open_cmd.py  pull.py  remove.py  search.py  serve.py  setup_ai.py  shell.py  skill_cmd.py  stats.py  status.py  tui.py  update.py  workspace_cmd.py
src/gitstow/core/: __init__.py  collection_io.py  config.py  diff.py  discovery.py  git.py  locking.py  operations.py  parallel.py  paths.py  repo.py  status_model.py  url_parser.py
src/gitstow/mcp/: __init__.py  server.py
src/gitstow/skill/: SKILL.md
src/gitstow/tui/: __init__.py  app.py
src/gitstow/web/: __init__.py  server.py
src/gitstow/web/routes/: __init__.py  collection.py  dashboard.py  pages.py  repos.py  system.py  workspaces.py
src/gitstow/web/static/: app.css  dashboard.js
src/gitstow/web/static/fonts/: fonts.css
src/gitstow/web/templates/: _repo_drawer.html  add_repo.html  base.html  dashboard.html  settings.html  workspaces.html
src/gitstow/web/templates/partials/: changes_section.html  dashboard_rows.html  diff_view.html  fetch_summary.html  pull_summary.html  repo_row.html
tests/: __init__.py  conftest.py  test_cli.py  test_collection_io.py  test_config.py  test_diff.py  test_git.py  test_locking.py  test_mcp.py  test_move.py  test_onboard.py  test_operations.py  test_repo.py  test_serve.py  test_setup_ai.py  test_status_model.py  test_url_parser.py
