[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstow"
version = "0.1.0"
description = "A git repository library manager — clone, organize, and maintain collections of repos you learn from"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Rish Madaan"},
]
keywords = ["git", "repository", "manager", "cli", "open-source", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "typer[all]>=0.9",
    "pyyaml>=6.0",
    "rich>=13.0",
    "beaupy>=3.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/rishmadaan/gitstow"
Repository = "https://github.com/rishmadaan/gitstow"
Documentation = "https://github.com/rishmadaan/gitstow#readme"
Issues = "https://github.com/rishmadaan/gitstow/issues"
Changelog = "https://github.com/rishmadaan/gitstow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
tui = [
    "textual>=0.50",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
gitstow = "gitstow.cli.main:app"
gitstow-mcp = "gitstow.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gitstow"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
